# Database-Schema-Migration

./: .dockerignore  .gitignore  Dockerfile  README.md  app.py  client.py  inference.py  models.py  openenv.yaml  pyproject.toml  requirements.txt  server.py
env/: database.py  environment.py  legacy_environment.py  legacy_models.py  models.py
graders/: __init__.py  schema_graders.py
server/: __init__.py  app.py  environment.py
tasks/: task_definitions.py
tests/: test_environment.py
