[project]
name = "schema-migration-openenv"
version = "1.0.0"
description = "A real-world RL environment for database schema migrations"
requires-python = ">=3.11"
dependencies = [
    "fastapi==0.111.0",
    "uvicorn[standard]==0.29.0",
    "pydantic==2.7.1",
    "openai==1.30.1",
    "requests==2.32.2",
    "python-multipart==0.0.9",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.backends.legacy:build"

[tool.setuptools.packages.find]
where = ["."]
include = ["env*", "tasks*", "graders*"]